<resources>
    <string name="app_name">م</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_first">firstActivity</string>
    <string name="title_home">خانه</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_tabbed">tabbedActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_proff_list_view">لیست اساتید</string>
    <string name="title_activity_proff_detail_activity">proff_detail_activity</string>
    <string name="title_activity_courses___list_view">دروس</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_course_to_prof__list_view">CourseToProf_ListView</string>
    <string name="title_activity_set_time">SetTimeActivity</string>
    <string name="title_activity_time_picker_activity">time_picker_activity</string>
    <string name="title_activity_login">ثبت نام/ورود</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">نام کاربری(شماره موبایل شما) مثل: 9120000000</string>
    <string name="prompt_password">پسورد</string>
    <string name="prompt_name">نام</string>
    <string name="prompt_Fname">نام خانوادگی</string>
    <string name="prompt_field">رشته</string>
    <string name="prompt_degree">پایه تحصیلی</string>
    <string name="prompt_age">سال تولد</string>
    <string name="prompt_schoolName">نام مدرسه</string>
    <string name="action_sign_in">ثبت نام</string>
    <string name="action_log_in_btn">برای ورود کلیک کنید</string>
    <string name="action_login_btn">ورود</string>
    <string name="action_infoEdit">ثبت تغییرات</string>
    <string name="action_infoEditCancel">لغو</string>
    <string name="title_activity_pay">payActivity</string>
    <string name="title_activity_info_edit">ویرایش اطلاعات</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
